Fixing padding to prevent shadow cut off

--- a/src/main/resources/static/startstopcontinue.css
+++ b/src/main/resources/static/startstopcontinue.css
@@ -28,8 +28,10 @@ ul,li {
   display: inline-block;
 }
 ul {
-  overflow:hidden;
-  padding:1em;
+  width: 100%;
+  overflow: hidden;
+  padding-top: 1em;
+  padding-bottom: 2em;
 }
 ul li {
   text-decoration:none;
